@@ -1,0 +1,7 @@
+package gnu.testlet.java.beans.Introspector;
+
+public abstract class A
+{
+  public abstract void a ();
+  public void b () { System.out.println ("b"); }
+}
