@@ -1,0 +1,6 @@
+package gnu.testlet.java.beans.Introspector;
+
+public class B extends A
+{
+  public void a () { System.out.println ("a"); }
+}
