@@ -1,0 +1,6 @@
+package gnu.testlet.java.beans.Introspector;
+
+public class C extends B
+{
+  public void c () { System.out.println ("c"); }
+}
